--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <title>G3 Architect Responsive Website</title>
     <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body>
-    <header></header>
+  <body class="work-sans-font">
+    <header>
+      <nav class="navbar">
+        <h3>G3 Architect</h3>
+      </nav>
+    </header>
     <main></main>
     <footer></footer>
   </body>
