--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       </div>
     </header>
     <main>
+      <!-- Teams section -->
       <section class="teams display-flex">
         <div class="team-image-container">
           <img
@@ -53,17 +54,37 @@
           <img src="images/team4.png" alt="" />
         </div>
         <div class="our-feature">
-          <h3 class="feature-title">
+          <h3 class="section-title">
             <span id="quick-list" class="text-light-gray">Quick list</span>
             <span>of Our</span>
-            <span>Features</span>
+            <span class="text-primary">Features</span>
           </h3>
-          <p class="feature-description">
+          <p class="feature-description text-light-gray">
             There are many variations of passages of Lorem Ipsum available, but
             the majority have suffered alteration in some form, by injected
             humour, or randomised words which don't look even
           </p>
           <button class="btn-primary">Explore More</button>
+        </div>
+      </section>
+
+      <!-- features will enjoy -->
+      <section></section>
+
+      <!-- Some facts -->
+      <section class="some-facts">
+        <h3 class="some-facts">Some Facts</h3>
+        <p class="text-light-gray">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration.
+        </p>
+
+        <div class="facts-container">
+          <div class="fact">
+            <img class="fact-icon" src="images/icons/ribon.png" alt="" />
+            <h4 class="fact-number">54</h4>
+            <h5 class="fact-name"></h5>
+          </div>
         </div>
       </section>
     </main>
