--- a/index.html
+++ b/index.html
@@ -74,16 +74,42 @@
       <!-- Some facts -->
       <section class="some-facts">
         <h3 class="some-facts">Some Facts</h3>
-        <p class="text-light-gray">
+        <p class="text-light-gray fact-description">
           There are many variations of passages of Lorem Ipsum available, but
           the majority have suffered alteration.
         </p>
 
         <div class="facts-container">
-          <div class="fact">
-            <img class="fact-icon" src="images/icons/ribon.png" alt="" />
-            <h4 class="fact-number">54</h4>
-            <h5 class="fact-name"></h5>
+          <div class="fact-card display-flex">
+            <div>
+              <img class="fact-icon" src="images/icons/ribon.png" alt="" />
+              <h4 class="fact-number">54</h4>
+              <h5 class="fact-name text-light-gray">Awards Won</h5>
+            </div>
+          </div>
+
+          <div class="fact-card display-flex">
+            <div>
+              <img class="fact-icon" src="images/icons/projects.png" alt="" />
+              <h4 class="fact-number">1458</h4>
+              <h5 class="fact-name text-light-gray">Project Finished</h5>
+            </div>
+          </div>
+
+          <div class="fact-card display-flex">
+            <div>
+              <img class="fact-icon" src="images/icons/customers.png" alt="" />
+              <h4 class="fact-number">590</h4>
+              <h5 class="fact-name text-light-gray">Client Worked</h5>
+            </div>
+          </div>
+
+          <div class="fact-card display-flex">
+            <div>
+              <img class="fact-icon" src="images/icons/email.png" alt="" />
+              <h4 class="fact-number">22578</h4>
+              <h5 class="fact-name text-light-gray">Email Sent</h5>
+            </div>
           </div>
         </div>
       </section>
