--- a/index.html
+++ b/index.html
@@ -68,8 +68,63 @@
         </div>
       </section>
 
-      <!-- features will enjoy -->
-      <section></section>
+      <!-- features section -->
+      <section class="features display-flex">
+        <div>
+          <h3 id="feature-section-title" class="section-title">
+            Features you will <br />
+            love & enjoy
+          </h3>
+          <p class="text-light-gray">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomized words which don't look even
+          </p>
+
+          <!-- feature card container -->
+
+          <div class="feature-card">
+            <h4 class="feature-title">Desktop & Mobile Version</h4>
+            <p class="text-light-gray">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomized...........
+            </p>
+          </div>
+          <div class="feature-card">
+            <h4 class="feature-title">Desktop & Mobile Version</h4>
+            <p class="text-light-gray">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomized...........
+            </p>
+          </div>
+          <div class="feature-card">
+            <h4 class="feature-title">Desktop & Mobile Version</h4>
+            <p class="text-light-gray">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomized...........
+            </p>
+          </div>
+          <div class="feature-card">
+            <h4 class="feature-title">Desktop & Mobile Version</h4>
+            <p class="text-light-gray">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomized...........
+            </p>
+          </div>
+        </div>
+        <div>
+          <img src="images/architect.png" alt="" />
+          <button id="experience-badge" class="btn-primary">
+            <span id="experience-years">10+ Years</span>
+            <br />
+            <span>Experience</span>
+          </button>
+        </div>
+      </section>
 
       <!-- Some facts -->
       <section class="some-facts">
