--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </p>
           </div>
         </div>
-        <div>
+        <div class="featured-architect">
           <img src="images/architect.png" alt="" />
           <button id="experience-badge" class="btn-primary">
             <span id="experience-years">10+ Years</span>
